football_scotland/airflow/logs/dag_id=intialization_database/run_id=manual__2024-09-29T171426.507144+0000/task_id=create_database_football_scotland/attempt=1.log
[2024-09-29T17:15:17.534+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-09-29T17:15:17.575+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: intialization_database.create_database_football_scotland manual__2024-09-29T17:14:26.507144+00:00 [queued]>
[2024-09-29T17:15:17.591+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: intialization_database.create_database_football_scotland manual__2024-09-29T17:14:26.507144+00:00 [queued]>
[2024-09-29T17:15:17.594+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-09-29T17:15:17.618+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): create_database_football_scotland> on 2024-09-29 17:14:26.507144+00:00
[2024-09-29T17:15:17.627+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=5061) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-09-29T17:15:17.629+0000] {standard_task_runner.py:63} INFO - Started process 5063 to run task
[2024-09-29T17:15:17.630+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'intialization_database', 'create_database_football_scotland', 'manual__2024-09-29T17:14:26.507144+00:00', '--job-id', '2838', '--raw', '--subdir', 'DAGS_FOLDER/initialization.py', '--cfg-path', '/tmp/tmpadil0qhz']
[2024-09-29T17:15:17.633+0000] {standard_task_runner.py:91} INFO - Job 2838: Subtask create_database_football_scotland
[2024-09-29T17:15:17.699+0000] {task_command.py:426} INFO - Running <TaskInstance: intialization_database.create_database_football_scotland manual__2024-09-29T17:14:26.507144+00:00 [running]> on host e78fe06b6548
[2024-09-29T17:15:17.810+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='intialization_database' AIRFLOW_CTX_TASK_ID='create_database_football_scotland' AIRFLOW_CTX_EXECUTION_DATE='2024-09-29T17:14:26.507144+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-09-29T17:14:26.507144+00:00'
[2024-09-29T17:15:17.812+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-09-29T17:15:17.812+0000] {sql.py:276} INFO - Executing: -- SQL script to create a database and schema
CREATE DATABASE football_scotland;
\connect football_scotland;  -- Switch to the new database
CREATE SCHEMA football_data;
[2024-09-29T17:15:17.822+0000] {base.py:84} INFO - Using connection ID 'football_***_connection' for task execution.
[2024-09-29T17:15:17.842+0000] {base.py:84} INFO - Using connection ID 'football_***_connection' for task execution.
[2024-09-29T17:15:17.846+0000] {sql.py:487} INFO - Running statement: -- SQL script to create a database and schema
CREATE DATABASE football_scotland;
\connect football_scotland;  -- Switch to the new database
CREATE SCHEMA football_data;, parameters: None
[2024-09-29T17:15:17.851+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-09-29T17:15:17.852+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "\"
LINE 3: \connect football_scotland;  -- Switch to the new database
        ^

[2024-09-29T17:15:17.866+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=intialization_database, task_id=create_database_football_scotland, run_id=manual__2024-09-29T17:14:26.507144+00:00, execution_date=20240929T171426, start_date=20240929T171517, end_date=20240929T171517
[2024-09-29T17:15:17.886+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 2838 for task create_database_football_scotland (syntax error at or near "\"
LINE 3: \connect football_scotland;  -- Switch to the new database
        ^
; 5063)
[2024-09-29T17:15:17.925+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-09-29T17:15:17.944+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-09-29T17:15:17.946+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
